--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
+#Ignore DS_Store files
+.DS_Store
+
 Jamoma/library/externals/mac/
+Jamoma/library/externals/windows/
 logs
+build
+html
+Debug
+Release
+*.mode1v3
+*.pbxuser
+*.layout
+*.depends
+*.map
+*.ncb
+*.suo
+*.user
