--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "UserLib/Jamoma.Ircam.IMTR"]
 	path = UserLib/Jamoma.Ircam.IMTR
 	url = git://github.com/lossius/Jamoma.Ircam.IMTR
+[submodule "UserLib/support"]
+	path = UserLib/support
+	url = git://github.com/Nilson/JamomaUserLibSupport.git
