adding HoloEdit folder to UserLib

--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "UserLib/support"]
 	path = UserLib/support
 	url = git://github.com/Nilson/JamomaUserLibSupport.git
+[submodule "UserLib/HoloEdit"]
+	path = UserLib/HoloEdit
+	url = git://github.com/Nilson/Holophone.git
