--- a/SourceCode/Framework/JamomaModular.vcproj
+++ b/SourceCode/Framework/JamomaModular.vcproj
@@ -43,7 +43,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(ProjectDir)&quot;;&quot;$(ProjectDir)source&quot;;&quot;$(ProjectDir)Internals&quot;;&quot;$(ProjectDir)Ramplib&quot;;&quot;$(ProjectDir)Dataspacelib&quot;;&quot;$(ProjectDir)Functionlib&quot;;&quot;$(ProjectDir)..\..\..\Foundation\library\includes&quot;;&quot;$(ProjectDir)..\..\..\DSP\library\includes&quot;;&quot;$(ProjectDir)..\..\..\DSP\library\includes\units&quot;;&quot;$(ProjectDir)..\..\..\..\Tools\library\max-sdk\c74support\max-includes&quot;;&quot;$(ProjectDir)..\..\..\..\Tools\library\max-sdk\c74support\msp-includes&quot;;&quot;$(ProjectDir)..\..\..\..\Tools\library\max-sdk\c74support\jit-includes&quot;;&quot;$(ProjectDir)..\..\..\..\Tools\library\common&quot;"
+				AdditionalIncludeDirectories="&quot;$(ProjectDir)&quot;;&quot;$(ProjectDir)source&quot;;&quot;$(ProjectDir)Internals&quot;;&quot;$(ProjectDir)Ramplib&quot;;&quot;$(ProjectDir)Dataspacelib&quot;;&quot;$(ProjectDir)Functionlib&quot;;&quot;$(ProjectDir)NodeLib&quot;;&quot;$(ProjectDir)..\..\..\Foundation\library\includes&quot;;&quot;$(ProjectDir)..\..\..\DSP\library\includes&quot;;&quot;$(ProjectDir)..\..\..\DSP\library\includes\units&quot;;&quot;$(ProjectDir)..\..\..\..\Tools\library\max-sdk\c74support\max-includes&quot;;&quot;$(ProjectDir)..\..\..\..\Tools\library\max-sdk\c74support\msp-includes&quot;;&quot;$(ProjectDir)..\..\..\..\Tools\library\max-sdk\c74support\jit-includes&quot;;&quot;$(ProjectDir)..\..\..\..\Tools\library\common&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;TTBLUE_EXPORTS;TT_PLATFORM_WIN;WIN_VERSION;_DLL_JAMOMA_EXPORT;_CRT_SECURE_NO_WARNINGS;_CRT_NOFORCE_MANIFEST;_STL_NOFORCE_MANIFEST"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -126,7 +126,7 @@
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
 				WholeProgramOptimization="false"
-				AdditionalIncludeDirectories="&quot;$(ProjectDir)&quot;;&quot;$(ProjectDir)source&quot;;&quot;$(ProjectDir)Internals&quot;;&quot;$(ProjectDir)Ramplib&quot;;&quot;$(ProjectDir)Dataspacelib&quot;;&quot;$(ProjectDir)Functionlib&quot;;&quot;$(ProjectDir)..\..\..\Foundation\library\includes&quot;;&quot;$(ProjectDir)..\..\..\DSP\library\includes&quot;;&quot;$(ProjectDir)..\..\..\DSP\library\includes\units&quot;;&quot;$(ProjectDir)..\..\..\..\Tools\library\max-sdk\c74support\max-includes&quot;;&quot;$(ProjectDir)..\..\..\..\Tools\library\max-sdk\c74support\msp-includes&quot;;&quot;$(ProjectDir)..\..\..\..\Tools\library\max-sdk\c74support\jit-includes&quot;;&quot;$(ProjectDir)..\..\..\..\Tools\library\common&quot;"
+				AdditionalIncludeDirectories="&quot;$(ProjectDir)&quot;;&quot;$(ProjectDir)source&quot;;&quot;$(ProjectDir)Internals&quot;;&quot;$(ProjectDir)Ramplib&quot;;&quot;$(ProjectDir)Dataspacelib&quot;;&quot;$(ProjectDir)Functionlib&quot;;&quot;$(ProjectDir)NodeLib&quot;;&quot;$(ProjectDir)..\..\..\Foundation\library\includes&quot;;&quot;$(ProjectDir)..\..\..\DSP\library\includes&quot;;&quot;$(ProjectDir)..\..\..\DSP\library\includes\units&quot;;&quot;$(ProjectDir)..\..\..\..\Tools\library\max-sdk\c74support\max-includes&quot;;&quot;$(ProjectDir)..\..\..\..\Tools\library\max-sdk\c74support\msp-includes&quot;;&quot;$(ProjectDir)..\..\..\..\Tools\library\max-sdk\c74support\jit-includes&quot;;&quot;$(ProjectDir)..\..\..\..\Tools\library\common&quot;"
 				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG;_USRDLL;TTBLUE_EXPORTS;TT_PLATFORM_WIN;WIN_VERSION;_DLL_JAMOMA_EXPORT;_CRT_SECURE_NO_WARNINGS;_CRT_NOFORCE_MANIFEST;_STL_NOFORCE_MANIFEST"
 				MinimalRebuild="false"
 				ExceptionHandling="1"
@@ -411,6 +411,18 @@
 			</File>
 			<File
 				RelativePath=".\Internals\jcom.send~.cpp"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="NodeLib"
+			>
+			<File
+				RelativePath=".\NodeLib\NodeLib.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\NodeLib\NodeLib.h"
 				>
 			</File>
 		</Filter>
