Adding (empty) SDIF UserLib folder

--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "UserLib/HoloEdit"]
 	path = UserLib/HoloEdit
 	url = git://github.com/Nilson/Holophone.git
+[submodule "UserLib/SDIF"]
+	path = UserLib/SDIF
+	url = git://github.com/krisny/SDIF.git
