--- a/SourceCode/Framework/JamomaModular.xcconfig
+++ b/SourceCode/Framework/JamomaModular.xcconfig
@@ -12,7 +12,7 @@
 // Name & Version
 PRODUCT_NAME = $(PROJECT_NAME)
 PRODUCT_VERSION = 0.5.0
-SVNREV = 53e8
+SVNREV = 9d5c
 
 
 // Paths
@@ -33,7 +33,7 @@ FRAMEWORK_SEARCH_PATHS = $(inherited) "$(SRCROOT)/../../../../Tools/library/max-
 SDKROOT = /Developer/SDKs/MacOSX10.5.sdk
 SDKROOT[arch=ppc] = /Developer/SDKs/MacOSX10.4u.sdk
 SDKROOT[arch=i386] = /Developer/SDKs/MacOSX10.4u.sdk
-SDKROOT[arch=x86_64] = /Developer/SDKs/MacOSX10.6.sdk
+SDKROOT[arch=x86_64] = /Developer/SDKs/MacOSX10.5.sdk
 GCC_VERSION[arch=ppc] = 4.0
 GCC_VERSION[arch=i386] = 4.0
 GCC_VERSION[arch=x86_64] = 4.2
