re-adding Holophon UserLib. Naming Holophon this time.  We can name the same as the old one without forcing everyone to throw out everything and checkout fresh copies.

--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "UserLib/SDIF"]
 	path = UserLib/SDIF
 	url = git://github.com/krisny/SDIF.git
+[submodule "UserLib/Holophon"]
+	path = UserLib/Holophon
+	url = git://github.com/Nilson/Holophon.git
