ReadMe is now generated by the installer script from a template ReadMe, which is located in the installertools folder.

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@ Tools/installertools/Windows/root
 /Tools/installertools/Windows/main.wixobj
 /Tools/installertools/Windows/ui.wixobj
 /Tools/installertools/Windows/Jamoma.msi
+
+# This ReadMe is generated from a Template -- only the template is under version control
+ReadMe.rtf
