--- a/.gitmodules
+++ b/.gitmodules
@@ -52,6 +52,6 @@
 [submodule "UserLib/Jamoma.Ircam.FTM"]
 	path = UserLib/Jamoma.Ircam.FTM
 	url = http://github.com/lossius/Jamoma.Ircam.FTM.git
-[submodule "TheGitter"]
-	path = TheGitter
+[submodule "Modules/TheGitter"]
+	path = Modules/TheGitter
 	url = git://github.com/bltzr/JamomaGitter.git
