--- a/SourceCode/Framework/JamomaModular.xcconfig
+++ b/SourceCode/Framework/JamomaModular.xcconfig
@@ -11,8 +11,8 @@
 
 // Name & Version
 PRODUCT_NAME = $(PROJECT_NAME)
-PRODUCT_VERSION = 0.5.0
-SVNREV = 9d5c
+PRODUCT_VERSION = 0.0.0
+SVNREV = 
 
 
 // Paths
