--- a/SourceCode/Framework/JamomaModular.xcconfig
+++ b/SourceCode/Framework/JamomaModular.xcconfig
@@ -11,8 +11,8 @@
 
 // Name & Version
 PRODUCT_NAME = $(PROJECT_NAME)
-PRODUCT_VERSION = 0.5.0
-SVNREV = 37f23
+PRODUCT_VERSION = 0.5.5a1
+SVNREV = 3c1b2
 
 
 // Paths
