--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,6 @@ Tools/installertools/Windows/root
 /Tools/installertools/Windows/ui.wixobj
 /Tools/installertools/Windows/Jamoma.msi
 
-# This ReadMe is generated from a Template -- only the template is under version control
+# These are generated from a Template -- only the template is under version control
 ReadMe.rtf
+tt-max.xcconfig
