--- a/.gitignore
+++ b/.gitignore
@@ -29,4 +29,6 @@ Jamoma/documentation/jamoma-help/jcom.ramp~.maxhelp
 Jamoma/documentation/jamoma-help/jcom.xfade~.maxhelp
 Jamoma/documentation/jamoma-help/jcom.zerox~.maxhelp
 
+# Files generated from templates by the build script
 JamomaModular.xcconfig
+TTModularVersion.h
