--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@ Jamoma/documentation/jamoma-help/jcom.overdrive~.maxhelp
 Jamoma/documentation/jamoma-help/jcom.ramp~.maxhelp
 Jamoma/documentation/jamoma-help/jcom.xfade~.maxhelp
 Jamoma/documentation/jamoma-help/jcom.zerox~.maxhelp
+
+TTModularVersion.h
