--- a/extensions/FilterLib/FilterLib.vcproj
+++ b/extensions/FilterLib/FilterLib.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9,00"
-	Name="TTFilterLib"
+	Name="FilterLib"
 	ProjectGUID="{BF8E70E9-D5B6-4719-866F-C415F4673B64}"
 	RootNamespace="tt.overdrive~"
 	Keyword="Win32Proj"
