adding PureData builds folder

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 Installers
 Builds/MaxMSP/*.mxo
 Builds/MaxMSP/*.maxhelp
+Builds/PureData/*.pd_darwin
 logs
 Tools/installertools/Windows/root
 *.mode1v3
